flash-algo-new/src/tests/snapshots/flash_algo_new__tests__more_real__basics_blank_to_start_matrix.snap
---
source: flash-algo-new/src/tests/more_real.rs
assertion_line: 117
expression: blank_to_start
---
00000000 | 00 00 00 00 00 00 00 00 2D 00 00 00 49 02 00 00 
...
00040000 | 01 00 00 00 01 00 00 00 2D 00 00 00 70 06 00 00
